apps/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: vikunja
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: todo.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - todo.amer.dev
      secretName: vikunja-amer-dev-tls
  rules:
    - host: todo.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
